# Lectures

./: README.md
CPP_FFFE/01_News_sources/: 01_news_sources.tex
CPP_FFFE/02_Compilation_flags/: 02_compilation_flags.tex
CPP_FFFE/03_Git_Banned/: 03_git_banned.tex  Makefile
CPP_FFFE/04_Cpp20_Modules/: 04_cpp_modules.tex  Makefile
CPP_FFFE/05_HCF/: 05_HCF.tex  Makefile
CPP_FFFE/06_DefaultedDefaultConstructors/: 06_DefDefConstr.tex  Makefile
CPP_FFFE/07_FunWithCairo/: 07_FunWithCairo.tex  Makefile
CPP_FFFE/08_PerfectForwarding/: 08_PerfectForwarding.tex  Makefile
CPP_FFFE/09_RuleOfZero/: .gitignore  09.tex  Makefile
CPP_FFFE/10_Constexpr/: 10.tex  Makefile
CPP_FFFE/11_Obfuscation_Basics/: Makefile  explained_obfuscated.cpp  numbers.cpp  obfuscated.c
CPP_FFFE/12_NaN_Poisoning/: CMakeLists.txt  README.md  transcript_pl.md
CPP_FFFE/12_NaN_Poisoning/code/: gps_data.txt  nan_behavior.cpp  nan_poisoning_demo.cpp  typical_nan_sources.cpp
CPP_FFFE/13_CaptureTheFlag/: README.md
CPP_FFFE/14_MostVexingParse/: Makefile
CPP_FFFE/15_GithubActionsForCpp/: README.md
CPP_FFFE/18_Span/: README.md
CPP_FFFE/19_SdlWaveforms/: Makefile
CPP_FFFE/20_EfficiencyOfContainers/: .gitignore
CPP_FFFE/21_ReferenceAndValueSemantics/: .gitignore  21.tex  Makefile
CPP_FFFE/22_Spdlog_and_fmt/: CMakeLists.txt  main.cpp  rotlog.cpp
Concurrency/: .gitignore
Leetcode/: agenda.txt  index.html  main.js  spoken.md  style.css  tekst.md
PracticalCompetitiveProgramming/: index.html  style.css
Web_presentation_template/: debug.css  index.html  main.js  style.css
(+92 files in other folders)
